--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-app",
+  "homepage": " https://github.com/ChandanK711/redux.git",
   "private": true,
   "version": "0.0.0",
   "type": "module",
